// Copyright 2021 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.core;

import "go.chromium.org/tast/core/framework/protocol/dutfeatures.proto";
import "go.chromium.org/tast/core/framework/protocol/dut_lab_config.proto";

option go_package = "go.chromium.org/tast/core/internal/protocol";

// Features represents a set of features available for tests.
message Features {
  // CheckDeps indicates whether to skip tests whose dependencies are not
  // satisfied by available features.
  bool check_deps = 5;

  DUTFeatures dut = 6;
  InfraFeatures infra = 7;
  map<string, DUTFeatures> companionFeatures = 8;
  // ForceSkip provides a mapping of the tests forced to skip and the reasons.
  map<string, ForceSkip> force_skips = 9;

  reserved 1 to 4;
}

// InfraFeatures represents a set of features made available by testing
// infrastructure.
message InfraFeatures {
  map<string, string> vars = 1;
  string maybe_missing_vars = 2;
  DUTLabConfig DUTLabConfig = 3;
}

// ForceSkip provides the reason of skipping a test by force.
message ForceSkip { string reason = 1; }
